# Snaps

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  tests.yml
include/snaps/: Block.hpp  Constants.hpp  Grid.hpp  SnapsEngine.hpp
sandbox/: CMakeLists.txt  Main.cpp
src/: Block.hpp  Constants.hpp  Grid.hpp  SnapsEngine.cpp  main.cpp
tests/: BasicSceneTests.cpp  BasicTests.cpp  CMakeLists.txt  GlobalConfiguration.hpp  Main.cpp  README.md  SceneTests.cpp
tests/fixtures/: SceneTest.cpp  SceneTest.hpp
tests/utils/: DebugBreak.hpp  GridChecker.hpp  GridCheckers.hpp  Printers.hpp  TestGrid.cpp  TestGrid.hpp  TestScene.cpp  TestScene.hpp  TestScenePreview.cpp  TestScenePreview.hpp
